buildscript {
    dependencies {
        classpath 'org.liquibase:liquibase-core:5.0.2'
    }
}

plugins {
    id 'java'
    id 'org.springframework.boot' version '4.0.5'
    id 'io.spring.dependency-management' version '1.1.7'
    id 'org.liquibase.gradle' version "3.1.0"
}

group = 'pl.kaminski'
version = '0.0.1-SNAPSHOT'
description = 'forum'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(21)
    }
}

repositories {
    mavenCentral()
}

dependencies {


    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    implementation 'org.springframework.boot:spring-boot-starter-webmvc'
    implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:3.0.3'
//    implementation 'org.webjars:swagger-ui:5.32.2'
    implementation 'org.springframework.boot:spring-boot-starter-security'
    implementation 'org.liquibase:liquibase-core'
    implementation 'com.auth0:java-jwt:4.5.0'
    implementation 'org.springframework.modulith:spring-modulith-starter-core'
    implementation 'org.springframework.modulith:spring-modulith-core'
    implementation 'org.jmolecules:jmolecules-ddd'

    runtimeOnly 'org.postgresql:postgresql'

    compileOnly 'org.projectlombok:lombok'

    annotationProcessor 'org.projectlombok:lombok'
    annotationProcessor "org.hibernate.orm:hibernate-processor"

    testImplementation 'org.springframework.boot:spring-boot-starter-test'

    testCompileOnly 'org.projectlombok:lombok'

    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
    testRuntimeOnly 'org.postgresql:postgresql'

    testAnnotationProcessor 'org.projectlombok:lombok'

    liquibaseRuntime 'org.liquibase:liquibase-core'
    liquibaseRuntime 'info.picocli:picocli:4.7.7'
    liquibaseRuntime 'org.postgresql:postgresql'
}

dependencyManagement {
    imports {
        mavenBom 'org.springframework.modulith:spring-modulith-bom:2.0.5'
        mavenBom 'org.jmolecules:jmolecules-bom:2025.0.2'
    }
}

tasks.named('test') {
    useJUnitPlatform()
    jvmArgs += "-XX:+EnableDynamicAgentLoading"
}


liquibase {
    activities {
        main {
            changelogFile "db/changelog/forum.master.xml"
            searchPath "${projectDir}/build/resources/main"
            outputFile "./build/liquibase.sql"
            url 'jdbc:postgresql://localhost:5432/forum'
            username 'forum'
            password 'forum'
        }
    }
}

update.dependsOn processResources